    this option forces deb-systemd-helper to create symlink inside
    /etc/systemd/system which it can't handle properly while removing
    the package (LP: #1436178).

  [ Robie Basak ]
  * Fix FTBFS by building the sql directory first so the
    required files are generated. Thanks to Marc Deslauriers.
  * Rename and install apport hook correctly.

 -- Bjoern Boschman <bjoern@boschman.de>  Wed, 10 Jun 2015 15:06:44 +0200

mysql-5.6 (5.6.19-1~exp1) experimental; urgency=low

  [ Bjoern Boschman ]
  * SECURITY UPDATE: New upstream release (LP: #1330168).
    - www.oracle.com/technetwork/topics/security/cpujul2014-1972956.html
    - CVE-2014-2484
    - CVE-2014-4258
    - CVE-2014-4260
    - CVE-2014-4238
    - CVE-2014-4233
    - CVE-2014-4240
    - CVE-2014-4214

 -- James Page <james.page@ubuntu.com>  Mon, 21 Jul 2014 14:01:12 +0100

mysql-5.6 (5.6.17-1~exp1) experimental; urgency=medium

  * SECURITY UPDATE: New upstream release (Closes: #744970).
    - http://www.oracle.com/technetwork/topics/security/cpuapr2014-1972952.html
    - CVE-2014-0001
    - CVE-2014-2430
    - CVE-2014-2431
    - CVE-2014-2435
    - CVE-2014-2436
    - CVE-2014-2440
  * d/p/CVE-2014-0001.patch: Dropped, included in security update.

 -- James Page <jamespage@debian.org>  Fri, 25 Apr 2014 08:06:10 +0100

mysql-5.6 (5.6.16-1~exp1) experimental; urgency=medium

  * New upstream point release:
    - d/p/*: Refreshed.
  * d/rules: Don't run dh_install with --fail-missing and exclusions until
    package is a complete replacement for mysql-5.5.
  * d/p/CVE-2014-0001.patch:
    - Fix buffer overflow in client/mysql.cc via a long server version string.
      CVE-2014-0001 (Closes: #741590).
  * d/mysql-server-5.6.mysql.upstart: Add upstart configuration.
  * d/tests/*,control: Add autopkgtest from mysql-5.5:
    - disable binlog.binlog_server_start_options as it requires writable /usr.
    - disable build autopkgtest until package ships libmysqlclient18.